tests/machine/x/kotlin/query_sum_select.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/query_sum_select.kt:29:23: error: type mismatch: inferred type is Number but Double was expected
            __res.add(sum(n))
                      ^
/workspace/mochi/tests/machine/x/kotlin/query_sum_select.kt:29:27: error: type mismatch: inferred type is Int but List<Any?> was expected
            __res.add(sum(n))
                          ^
