tests/machine/x/kotlin/query_sum_select.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-17T00:51:49Z
fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}
// Code generated from query_sum_select.mochi

val nums = mutableListOf(1, 2, 3)

val result = run {
    val __res = mutableListOf<Double>()
    for (n in nums) {
        if (n > 1) {
            __res.add(sum(n))
        }
    }
    __res
}

fun main() {
    println(result)
}
